@@ -6,7 +6,9 @@
 //
 CUTS_INLINE
 CUTS_Periodic_Event::CUTS_Periodic_Event (void)
-: type_ (Strategy_Type::PE_UNDEFINED)
+: type_ (Strategy_Type::PE_UNDEFINED),
+  timer_ (-1),
+  hertz_ (0.0)
 {
 
 }
